--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
+# Core Django & REST Framework
 Django==4.2.7
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
-psycopg2-binary==2.9.9
+djangorestframework-simplejwt==5.3.1  # latest patch for JWT support
+
+# Database & ORM tools
+psycopg2-binary==2.9.11  # fixed for Windows + Python 3.12+
+dj-database-url==3.0.1
+django-filter==23.5
+django-timezone-field==6.1.0
+django-redis==5.4.0
+
+# Background Tasks & Caching
 celery==5.3.4
 redis==5.0.1
+
+# Third-party Integrations
 stripe==7.4.0
-Pillow==10.1.0
-django-cors-headers==4.3.1
-django-filter==23.5
-python-decouple==3.8
-django-timezone-field==6.1.0
 PyJWT==2.8.0
-django-redis==5.4.0
+
+# Media & File Handling
+Pillow==10.4.0
 reportlab==4.0.7
+
+# CORS, Config & Deployment
+django-cors-headers==4.3.1
+python-decouple==3.8
 gunicorn==21.2.0
-dj-database-url==3.0.1
-drf-spectacular
+
+# API Documentation
+drf-spectacular==0.27.2  # explicitly pinned, compatible with DRF 3.14
