--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,4 @@ gunicorn==21.2.0
 
 # API Documentation
 drf-spectacular==0.27.2  # explicitly pinned, compatible with DRF 3.14
+drf-spectacular-sidecar==2024.1.1 
