--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,33 @@
-# Core Django & REST Framework
-Django==4.2.7
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1  # latest patch for JWT support
-
-# Database & ORM tools
-psycopg2-binary==2.9.11  # fixed for Windows + Python 3.12+
-dj-database-url==3.0.1
-django-filter==23.5
-django-timezone-field==6.1.0
-django-redis==5.4.0
-
-# Background Tasks & Caching
+asgiref==3.10.0
+attrs==25.4.0
 celery==5.3.4
-redis==5.0.1
-
-# Third-party Integrations
-stripe==7.4.0
-PyJWT==2.8.0
-
-# Media & File Handling
-Pillow==10.4.0
-reportlab==4.0.7
-
-# CORS, Config & Deployment
+dj-database-url==3.0.1
+Django==4.2.7
 django-cors-headers==4.3.1
-python-decouple==3.8
+django-filter==23.5
+django-redis==5.4.0
+django-timezone-field==6.1.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
+drf-spectacular-sidecar==2025.10.1
 gunicorn==21.2.0
-
-# API Documentation
-drf-spectacular==0.27.2  # explicitly pinned, compatible with DRF 3.14
-drf-spectacular-sidecar==2024.1.1 
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+pillow==10.4.0
+psycopg2-binary==2.9.11
+PyJWT==2.8.0
+python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.3
+redis==5.0.1
+referencing==0.37.0
+reportlab==4.0.7
+rpds-py==0.28.0
+setuptools==80.9.0
+sqlparse==0.5.3
+stripe==7.4.0
+tzdata==2025.2
+uritemplate==4.2.0
+wheel==0.45.1
