--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=rdda jcpp rfhc yiyu
+EMAIL_HOST_PASSWORD=ddd
 
 PLATFORM_FEE_PERCENTAGE=15
 DEFAULT_CURRENCY=USD
