Add the requirements.txt file

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,35 @@ tzdata==2025.2
 uritemplate==4.2.0
 wheel==0.45.1
 whitenoise==6.11.0
+asgiref
+attrs
+celery
+dj-database-url
+Django
+django-cors-headers
+django-filter
+django-redis
+django-timezone-field
+djangorestframework
+djangorestframework-simplejwt
+drf-spectacular
+drf-spectacular-sidecar
+gunicorn
+inflection
+jsonschema
+jsonschema-specifications
+pillow
+psycopg2-binary
+PyJWT
+python-decouple
+pytz
+PyYAML
+redis
+referencing
+reportlab
+rpds-py
+sqlparse
+stripe
+tzdata
+uritemplate
+whitenoise
